--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        package="io.github.kutaiba_nezar_kashmar.multiverse_of_geeks">
+        package="io.github.kutaiba_nezar_kashmar.newapp">
 
     <application
             android:allowBackup="true"
@@ -8,12 +8,12 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/Theme.Multiverse_of_Geeks">
+            android:theme="@style/Theme.NewApp">
         <activity
-                android:name=".MainActivity"
+                android:name="io.github.kutaiba_nezar_kashmar.multiverse_of_geeks.MainActivity"
                 android:exported="true"
                 android:label="@string/app_name"
-                android:theme="@style/Theme.Multiverse_of_Geeks.NoActionBar">
+                android:theme="@style/Theme.NewApp.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
