--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "NewApp"
+rootProject.name = "Multiverse_of_Geeks"
 include ':app'
