--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'androidx.navigation.safeargs'
 }
 
 android {
@@ -35,6 +36,7 @@ android {
 }
 
 dependencies {
+    implementation "androidx.navigation:navigation-compose:2.4.1"
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
     implementation 'com.android.volley:volley:1.2.1'
