--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ android {
 }
 
 dependencies {
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
     implementation "androidx.navigation:navigation-compose:2.4.1"
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
