--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,11 +3,13 @@
         xmlns:tools="http://schemas.android.com/tools"
         package="io.github.kutaiba_nezar_kashmar.newapp">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
-    <uses-permission android:name="android.permission.BIND_AUTOFILL_SERVICE"
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission
+            android:name="android.permission.BIND_AUTOFILL_SERVICE"
             tools:ignore="ProtectedPermissions" />
+
     <application
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
@@ -29,7 +31,11 @@
 
         <meta-data
                 android:name="io.github.kutaiba_nezar_kashmar.multiverse_of_geeks.API_KEY"
-                android:value="${API_KEY}"/>
+                android:value="${API_KEY}" />
+
+        <meta-data
+                android:name="io.github.kutaiba_nezar_kashmar.multiverse_of_geeks.RAWG_API_KEY"
+                android:value="${RAWG_API_KEY}" />
     </application>
 
 </manifest>
