--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         maven { url "https://jitpack.io" }
     }
     dependencies {
+        classpath 'com.google.gms:google-services:4.3.10'
         def nav_version = "2.4.1"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     }
