--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,33 +38,67 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.preference:preference:1.2.0'
-    implementation 'de.hdodenhof:circleimageview:3.1.0'
-    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
-    implementation "androidx.navigation:navigation-compose:2.4.2"
-    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
-    implementation 'javax.annotation:javax.annotation-api:1.3.2'
-    implementation 'com.android.volley:volley:1.2.1'
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
-    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
-    implementation 'com.google.firebase:firebase-auth:21.0.3'
-    implementation 'com.google.firebase:firebase-database:20.0.4'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    //retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation "androidx.room:room-runtime:2.4.2"
-    annotationProcessor "androidx.room:room-compiler:2.4.2"
-    implementation 'com.google.android.material:material:<version>'
-    implementation "androidx.viewpager2:viewpager2:1.0.0"
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
+
+    //volley
+    implementation 'com.android.volley:volley:1.2.1'
+
+    //rxjava
+    implementation group: 'com.squareup.retrofit2', name: 'adapter-rxjava3', version: '2.9.0'
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.0'
+
+    //preferences
+    implementation 'androidx.preference:preference:1.2.0'
+
+    //circle image view by hdodenhof
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    //refresh layout
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+
+    //navigation
+    implementation "androidx.navigation:navigation-compose:2.4.2"
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.2'
+
+    //annotation
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
+
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
+    //lifecycle
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
+
+    //firebase
+    implementation 'com.google.firebase:firebase-auth:21.0.3'
+    implementation 'com.google.firebase:firebase-database:20.0.4'
+
+    //room database
+    implementation "androidx.room:room-runtime:2.4.2"
+    annotationProcessor "androidx.room:room-compiler:2.4.2"
+
+    //view pager
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
+
+    //recycler view
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+
+    //material
+    implementation 'com.google.android.material:material:<version>'
+    implementation 'com.google.android.material:material:1.5.0'
+
+    //initial dependencies
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.databinding:databinding-runtime:7.1.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
