--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,9 @@ android {
 }
 
 dependencies {
+    //Http3Client
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
+
     //retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
