--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,6 +86,7 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
     implementation 'com.google.firebase:firebase-analytics:20.1.2'
     implementation 'com.google.firebase:firebase-database:20.0.4'
+    implementation 'com.firebaseui:firebase-ui-database:8.0.1'
     implementation platform('com.google.firebase:firebase-bom:29.3.1')
 
     //room database
