--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,6 +91,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:20.0.5'
     implementation 'com.firebaseui:firebase-ui-database:8.0.1'
     implementation platform('com.google.firebase:firebase-bom:29.3.1')
+    implementation 'com.firebaseui:firebase-ui-storage:7.2.0'
 
     //room database
     implementation "androidx.room:room-runtime:2.4.2"
